--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,12 @@
   @apply p-2.5 text-xl shadow-xl rounded-md text-black bg-white border border-slate-400
 }
 
+@media (max-width: 639px) {
+  .icons:hover {
+    @apply p-2.5 text-xl shadow-xl rounded-md text-white bg-slate-800 border border-slate-800 
+  }
+}
+
 .custom-tooltip {
   background-color: #000 !important;
   color: #fff !important;
